--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
             </div>
 
             <div class="d-inline-block col-12 col-lg-6 mt-2">
-              <label for="city" class="form-label">City *</label>
+              <label for="city" class="form-label">City/Post Code *</label>
               <input
                 type="text"
                 class="form-control formStyles"
@@ -623,20 +623,7 @@
                 title="Please enter your city"
               />
             </div>
-            <div class="col-12 col-lg-4 d-inline-block">
-              <label for="zipcode" class="form-label">postcode *</label>
-              <input
-                type="text"
-                class="form-control formStyles"
-                name="zipcode"
-                id="zipcode"
-                placeholder="Zip Code"
-                required="required"
-                pattern="[0-9]{5}"
-                maxlength="5"
-                title="Please enter your postcode"
-              />
-            </div>
+ 
             <div class="d-inline-block col-12 col-lg-10 mt-2">
               <label for="message" class="form-label">Message</label>
               <textarea
