--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
       <div class="col-md-4"></div>
       <div class="col-md-5 text-center">
         © BHP Direct 2022. All rights reserved. <br />
-        Bradford, UK 28052 &nbsp; <span id="bottomNumber">08712451926</span>
+        Bradford, UK. Email: bhpdirectcouk@gmail.com &nbsp; <span id="bottomNumber">08712451926</span>
       </div>
       <div class="col-md-3" id="social">
         <span>Social</span>
