--- a/index.html
+++ b/index.html
@@ -675,5 +675,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="app.js"></script>
+	<script src="snowstorm.js"></script>
   </body>
 </html>
